Cambios en Principal

--- a/public/Principal.html
+++ b/public/Principal.html
@@ -34,7 +34,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="login.html">Iniciar
+                        <a class="nav-link active" aria-current="page" href="/registro">Iniciar
                             Sesión</a>
                         <a class="nav-link" href="#Quienes">Quienes Somos</a>
                         <a class="nav-link" href="#Contactanos">Contáctanos</a>
